erDiagram
    USER_ACCOUNT ||--o{ DEMO_ORDER : owns
    USER_ACCOUNT ||--o{ AFTER_SALE_APPLICATION : submits
    USER_ACCOUNT ||--o{ SERVICE_REVIEW : writes
    DEMO_ORDER ||--o{ AFTER_SALE_APPLICATION : has
    AFTER_SALE_APPLICATION ||--o{ AFTER_SALE_PROCESS_LOG : records
    AFTER_SALE_APPLICATION ||--o{ AFTER_SALE_EVIDENCE : contains
    AFTER_SALE_APPLICATION ||--o{ REPLY_DRAFT : generates
    AFTER_SALE_APPLICATION ||--o{ AFTER_SALE_RISK_ASSESSMENT : evaluated_by
    AFTER_SALE_EVIDENCE ||--o{ EVIDENCE_AUDIT : audited_by
    CHAT_SESSION ||--o{ SERVICE_TICKET : creates
    SERVICE_TICKET ||--o{ REPLY_DRAFT : assists
    KNOWLEDGE_DOC ||--o{ RETRIEVAL_LOG : hit_by
    CHAT_SESSION ||--o{ AI_CALL_LOG : traces
    CHAT_SESSION ||--o{ PROCESS_TRACE : records
